# alterator-application-components

./: .gitignore  CMakeLists.txt  Dockerfile  alterator-application-components.spec
alterator/: components-app.application  components-app.backend  components.backend  components.object
cmake/: TranslationUtils.cmake
script/: build.sh
setup/: ru.basealt.alterator.components1.policy  ru.basealt.alterator.components1.xml
src/: CMakeLists.txt  amcapp.cpp  amcapp.h  componentsapplicator.cpp  componentsapplicator.h  componentswidget.cpp  componentswidget.h  componentswidget.ui  constants.h  controller.cpp  controller.h  controllerinterface.h  en.ts  icon.qrc  infodialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowsettings.cpp  mainwindowsettings.h  packagesdialog.cpp  packagesdialog.h  packagesdialog.ui  ru.ts  waitdialog.cpp  waitdialog.h  waitdialog.ui
src/model/: amcobject.cpp  amcobject.h  componentcategory.h  componentobject.cpp  componentobject.h  item.cpp  item.h  model.cpp  model.h  modelbuilder.cpp  modelbuilder.h
src/model/parsers/: baseobjectparser.cpp  baseobjectparser.h  objectparserinterface.h
